--- a/readme
+++ b/readme
@@ -1,1 +1,9 @@
-Leia me
+Projeto de Orientação à Objetos
+
+Nomes:
+
+Rodrigo Wendrel Ferreira de Oliveira - 211063022
+Danielle Rodrigues Silva - 211061574
+Davi Rodrigues da Rocha - 211061618
+Bianca Patrocínio Castro - 221008801
+Matheus Augusto Morinishi Ribeiro -180127667
